[tool.poetry]
name = "gluetool-modules"
version = "0.9.0"
description = "Collection of gluetool modules used by Testing Farm Team."
homepage = "https://gluetool-modules.readthedocs.io"
repository = "https://gitlab.com/gluetool/modules"
authors = [
    "Evgeny Fedin <<efedin@redhat.com>>",
    "Anna Khaitovich <<akhaitov@redhat.com>>",
    "Martin Kluson <<mkluson@redhat.com>>",
    "Ondrej Ptak <<optak@redhat.com>>",
    "Milos Prchlik <<mprchlik@redhat.com>>",
    "Miroslav Vadkerti <<mvadkert@redhat.com>>"
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Shells",
    "Topic :: System :: Software Distribution",
    "Topic :: Terminals"
]

[tool.poetry.scripts]
citool = "gluetool_modules.tools.citool:run"

[tool.poetry.plugins."gluetool.modules"]
ansible = "gluetool_modules.helpers.ansible:Ansible"
artemis = "gluetool_modules.provision.artemis:ArtemisProvisioner"
beah-result-parser = "gluetool_modules.testing.beah_result_parser:BeahResultParser"
beah-xunit = "gluetool_modules.testing.beah_xunit:BeahXUnit"
beaker = "gluetool_modules.testing.beaker.beaker:Beaker"
beaker-job = "gluetool_modules.testing.beaker.beaker_job:BeakerJob"
beaker-jobwatch = "gluetool_modules.helpers.beaker_jobwatch:BeakerJobwatch"
beaker-job-xml = "gluetool_modules.testing.beaker_job_xml:BeakerJobXML"
beaker-provisioner = "gluetool_modules.provision.beaker:BeakerProvisioner"
bkr = "gluetool_modules.infrastructure.bkr:Beaker"
brew-builder = "gluetool_modules.testing.pull_request_builder.brew_builder:BrewBuilder"
brew-build-task-params = "gluetool_modules.helpers.brew_build_task_params:BrewBuildOptions"
brew = "gluetool_modules.infrastructure.koji_fedora:Brew"
brew-tag-build = "gluetool_modules.helpers.brew_tag_build:CIBrewTagBuild"
bugzilla = "gluetool_modules.infrastructure.bugzilla:Bugzilla"
build-dependencies = "gluetool_modules.helpers.build_dependencies:BuildDependencies"
build-on-commit = "gluetool_modules.build_on_commit.build_on_commit:CIBuildOnCommit"
bus-listener = "gluetool_modules.infrastructure.bus_listener:BusListener"
coldstore = "gluetool_modules.helpers.coldstore:ColdStore"
compose-url = "gluetool_modules.helpers.compose_url:ComposeUrl"
copr = "gluetool_modules.infrastructure.copr:Copr"
copr-builder = "gluetool_modules.testing.pull_request_builder.copr_builder:CoprBuilder"
covscan = "gluetool_modules.static_analysis.covscan.covscan:CICovscan"
covscan-job = "gluetool_modules.static_analysis.covscan.covscan_job:CovscanJob"
dashboard = "gluetool_modules.helpers.dashboard:Dashboard"
dist-git = "gluetool_modules.infrastructure.distgit:DistGit"
docker = "gluetool_modules.infrastructure._docker:Docker"
docker-provisioner = "gluetool_modules.provision.docker:DockerProvisioner"
envinject = "gluetool_modules.helpers.envinject:EnvInject"
events = "gluetool_modules.helpers.events:Events"
execute-command = "gluetool_modules.helpers.execute_command:ExecuteCommand"
exporter-resultsdb = "gluetool_modules.helpers.exporter_resultsdb:CIExporterResultsDB"
github = "gluetool_modules.infrastructure.github:GitHub"
github-copr-build-job = "gluetool_modules.testing.pull_request_builder.github_copr_build_job:CoprBuildJob"
guess-environment = "gluetool_modules.helpers.guess_environment:GuessEnvironment"
guest-setup = "gluetool_modules.helpers.guest_setup:GuestSetup"
install-copr-build = "gluetool_modules.helpers.install_copr_build:InstallCoprBuild"
install-koji-build = "gluetool_modules.helpers.install_koji_build:InstallKojiBuild"
install-koji-docker-image = "gluetool_modules.helpers.install_koji_docker_image:InstallKojiDockerImage"
install-mbs-build-execute = "gluetool_modules.helpers.install_mbs_build_execute:InstallMBSBuild"
install-mbs-build = "gluetool_modules.helpers.install_mbs_build:InstallMBSBuild"
jenkins-build-name = "gluetool_modules.helpers.jenkins.jenkins_build_name:JenkinsBuildName"
jenkins = "gluetool_modules.infrastructure.jenkins:CIJenkins"
koji = "gluetool_modules.infrastructure.koji_fedora:Koji"
mbs = "gluetool_modules.infrastructure.mbs:MBS"
memcached = "gluetool_modules.infrastructure.memcached:Memcached"
mysql = "gluetool_modules.database._mysql:MySQL"
notes = "gluetool_modules.helpers.notes:Notes"
notify-email-beah-formatter = "gluetool_modules.helpers.notify_email.notify_email_beah_formatter:NotifyEmailBeahFormatter"
notify-email-brew-build-formatter = "gluetool_modules.helpers.notify_email.notify_email_brew_build_formatter:NotifyEmailBrewBuildFormatter"
notify-email-covscan-formatter = "gluetool_modules.helpers.notify_email.notify_email_covscan_formatter:NotifyEmailCovscanFormatter"
notify-email = "gluetool_modules.helpers.notify_email.notify_email:Notify"
notify-email-rpmdiff-formatter = "gluetool_modules.helpers.notify_email.notify_email_rpmdiff_formatter:NotifyEmailRPMdiffFormatter"
notify-email-rpminspect-formatter = "gluetool_modules.helpers.notify_email.notify_email_rpminspect_formatter:NotifyEmailRPMinspectFormatter"
notify-email-xunit-formatter = "gluetool_modules.helpers.notify_email.notify_email_xunit_formatter:NotifyEmailxUnitFormatter"
notify-recipients = "gluetool_modules.helpers.notify_recipients:NotifyRecipients"
openstack = "gluetool_modules.infrastructure.openstack:CIOpenstack"
openstack-job = "gluetool_modules.testing.openstack.openstack_job:OpenStackJob"
pagure-brew-build-job = "gluetool_modules.testing.pull_request_builder.pagure_brew_build_job:BrewBuildJob"
pagure = "gluetool_modules.infrastructure.pagure:Pagure"
pagure-srpm = "gluetool_modules.helpers.pagure_srpm:PagureSRPM"
pes = "gluetool_modules.infrastructure.pes:PES"
pipeline-install-ancestors = "gluetool_modules.pipelines.pipeline_install_ancestors:PipelineInstallAncestors"
pipeline-state-reporter = "gluetool_modules.helpers.pipeline_state_reporter:PipelineStateReporter"
postgresql = "gluetool_modules.database.postgresql:PostgreSQL"
publisher-ci-bus = "gluetool_modules.helpers.publisher_ci_bus:CIBusPublisher"
publisher-umb-bus = "gluetool_modules.helpers.publisher_umb_bus:UMBPublisher"
restraint = "gluetool_modules.testing.restraint:Restraint"
rpmdiff = "gluetool_modules.static_analysis.rpmdiff.rpmdiff:CIRpmdiff"
rpmdiff-job = "gluetool_modules.static_analysis.rpmdiff.rpmdiff_job:RpmdiffJob"
rpminspect = "gluetool_modules.static_analysis.rpminspect.rpminspect:CIRpminspect"
rpminspect-job = "gluetool_modules.static_analysis.rpminspect.rpminspect_job:RpminspectJob"
rules-engine = "gluetool_modules.helpers.rules_engine:RulesEngine"
semaphore = "gluetool_modules.infrastructure.semaphore:Semaphore"
simple-wow-export = "gluetool_modules.helpers.simple_wow_export:SimpleWowExport"
smtp = "gluetool_modules.helpers.smtp:SMTP"
static-guest = "gluetool_modules.infrastructure.static_guest:CIStaticGuest"
task-dispatcher = "gluetool_modules.dispatchers.task_dispatcher:TaskDispatcher"
tcms-run = "gluetool_modules.testing.tcms_run:TCMSRun"
tedude = "gluetool_modules.testing.tedude:TeDuDe"
tedude-job = "gluetool_modules.testing.tedude_job:TeDuDeJob"
test-batch-planner = "gluetool_modules.dispatchers.test_batch_planner:TestBatchPlanner"
testing-results = "gluetool_modules.testing.testing_results:TestingResults"
testing-thread = "gluetool_modules.helpers.testing_thread:TestingThread"
test-scheduler-beaker-xml = "gluetool_modules.testing.test_scheduler_beaker_xml:TestSchedulerBeakerXML"
test-schedule-report = "gluetool_modules.testing.test_schedule_report:TestScheduleReport"
test-scheduler = "gluetool_modules.testing.test_scheduler:TestScheduler"
test-scheduler-sti = "gluetool_modules.testing.test_scheduler_sti:TestSchedulerSTI"
test-schedule-runner = "gluetool_modules.testing.test_schedule_runner:TestScheduleRunner"
test-schedule-runner-restraint = "gluetool_modules.testing.test_schedule_runner_restraint:RestraintRunner"
test-schedule-runner-sti = "gluetool_modules.testing.test_schedule_runner_sti:STIRunner"
test-scheduler-upgrades = "gluetool_modules.testing.test_scheduler_upgrades:TestSchedulerUpgrades"
test-schedule-tmt = "gluetool_modules.testing.test_schedule_tmt:TestScheduleTMT"
trigger-message = "gluetool_modules.helpers.trigger_message:TriggerMessage"
url-shortener = "gluetool_modules.helpers.url_shortener:URLShortener"
wow-artifact-installation-options-koji-build = "gluetool_modules.helpers.beaker.wow_artifact_installation_options_koji_build:WowArtifactInstallationOptionsKojiBuild"
wow-artifact-installation-options-koji-docker-image = "gluetool_modules.helpers.beaker.wow_artifact_installation_options_koji_docker_image:WowArtifactIntallationOptionsKojiDockerImage"
wow = "gluetool_modules.testing.wow:WorkflowTomorrow"

[tool.poetry.dependencies]
python = "~2.7"
typing = "^3.7.4"
typing-extensions = "^3.7.4"
jaeger-client = "4.0.0"
commonmark = "0.8.0"
ansible = "2.8.5"
cmd2 = "0.8.6"
beautifulsoup4 = "4.6.3"
python-dateutil = "2.7.1"
docker = "3.5.1"
docker-pycreds = "0.3.0"
enum34 = "1.1.6"
fmf = "0.6.1"
GitPython = "2.1.15"
gitdb2 = "2.0.6"
inotify = "0.2.10"
jenkins-job-builder = "1.6.2"
jenkinsapi = "0.3.8"
jq = "0.1.6"
mako = "1.0.6"
mysql-connector-python = "8.0.13"
packaging = "17.1"
proton = "0.8.8"
psycopg2 = "2.8.3"
pyOpenSSL = "17.0.0"
pycurl = "^7.43.0"
pymemcache = "2.0.0"
python-bugzilla = "2.3.0"
python-glanceclient = "2.8.0"
python-neutronclient = "7.1.0"
python-novaclient = "7.1.0"
python-openstackclient = "3.9.0"
python-qpid-proton = "0.18.1"
requests-kerberos = "0.11.0"
requests = "2.19.1"
requestsexceptions = "1.2.0"
rpm-py-installer = "0.7.1"
six = "1.12.0"
"stomp.py" = "4.1.17"
urlgrabber = "3.10.2"
warlock = "1.2.0"
nitrate = "1.3.1"
sphinx-argparse = "0.2.0"
sphinxcontrib-programoutput = "0.11"
futures = "3.2.0"
docutils = "0.14"
future = "0.16.0"
jinja2 = "2.10"
sphinx = "1.5.2"
gluetool = "^1.21"
koji = "^1.21.0"
backports-abc = "^0.5"

[tool.poetry.dev-dependencies]
tox = "3.8.6"
flake8 = "3.7.8"
yamllint = "1.16.0"
pytest-flake8 = "1.0.4"
pytest-cov = "2.7.1"
pytest-catchlog = "1.2.2"
pytest-mock = "1.10.4"
pytest = "4.6.5"
pytest-pylint = "0.14.1"
pylint = "1.9.5"

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/gluetool/modules/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
